dataset1235/2025-2/2947369575/users/1754031506/executions/1003782500_3921830315.log
== SUBMISSION (2025-09-01 21:45:14)
-- CODE: 
quantidade = float(input())

gasolina = 2.86
serviço = 50.00
icms = (34/1000
total = quantida*gasolina + serviço + icms

print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 5
    icms = (34/1000
           ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 5
    icms = (34/1000
           ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 5
    icms = (34/1000
           ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 5
    icms = (34/1000
           ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 5
    icms = (34/1000
           ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 5
    icms = (34/1000
           ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 21:53:17)
-- CODE: 
quantidade = float(input())

gasolina = 2.86
serviço = 50.00
icms = 34

gasolina_total = quantidade*gasolina
sem_imposto = gasolina_total + serviço
valor_icms = sem_imposto * (icms/100)
total = sem_imposto+valor_icms
print(round(total,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
230.57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
